# HydraXcel

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
configs/: accelerate.yaml  hello.yaml
configs/accelerate/compile/: none.yaml
configs/accelerate/hardware/: gpu.yaml  multi-gpu.yaml
configs/accelerate/paradigm/: megatron.yaml  torch_ddp.yaml  torch_fsdp.yaml
configs/accelerate/precision/: fp16.yaml  fp8.yaml
examples/: __init__.py  hello.py
examples/configs/: accelerate.yaml  hello.yaml
examples/configs/accelerate/compile/: inductor.yaml
examples/configs/accelerate/hardware/: cpu.yaml
examples/configs/accelerate/paradigm/: deepspeed.yaml
examples/configs/accelerate/precision/: bf16.yaml  no.yaml
outputs/2025-08-11/15-20-35/.hydra/: config.yaml  hydra.yaml
outputs/2025-08-11/15-21-01/.hydra/: hydra.yaml
outputs/2025-08-11/15-24-18/.hydra/: config.yaml  hydra.yaml
outputs/2025-08-11/15-25-22/.hydra/: hydra.yaml
outputs/2025-08-11/15-25-40/.hydra/: hydra.yaml
outputs/2025-08-11/15-27-28/.hydra/: hydra.yaml
outputs/2025-08-11/15-27-55/.hydra/: hydra.yaml
outputs/2025-08-11/15-28-29/.hydra/: hydra.yaml
outputs/2025-08-11/15-31-32/.hydra/: hydra.yaml
outputs/2025-08-11/15-31-53/.hydra/: hydra.yaml
outputs/2025-08-11/15-35-46/.hydra/: hydra.yaml
outputs/2025-08-11/15-36-07/.hydra/: hydra.yaml
outputs/2025-08-11/15-36-54/.hydra/: hydra.yaml
outputs/2025-08-11/15-36-55/.hydra/: config.yaml  hydra.yaml
outputs/2025-08-11/15-55-20/.hydra/: hydra.yaml
outputs/2025-08-11/15-55-52/.hydra/: hydra.yaml
outputs/2025-08-11/15-56-00/.hydra/: hydra.yaml
outputs/2025-08-11/15-57-02/.hydra/: config.yaml  hydra.yaml
outputs/2025-08-11/15-57-03/.hydra/: config.yaml  hydra.yaml
outputs/2025-08-11/15-57-16/.hydra/: hydra.yaml
outputs/2025-08-11/15-59-51/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-08-11/16-02-33/.hydra/: hydra.yaml
outputs/2025-08-11/16-03-25/.hydra/: hydra.yaml
outputs/2025-08-11/16-03-29/.hydra/: hydra.yaml
outputs/2025-08-11/17-13-44/.hydra/: hydra.yaml
outputs/2025-08-11/17-14-14/.hydra/: hydra.yaml
outputs/2025-08-11/17-14-15/.hydra/: hydra.yaml
outputs/2025-08-11/17-20-57/.hydra/: hydra.yaml
src/agenticrl/: __init__.py
src/agenticrl/accelerate/: __init__.py  config.py  launch.py
src/agenticrl/accelerate_utils/: launcher.py
src/agenticrl/logging/: __init__.py  exception_logging.py  init_wandb.py  logger_config.py
src/agenticrl/scripts/: __init__.py  hello.py  setup_tools.py
src/hydraflow/: __init__.py
src/hydraflow/accelerate/: __init__.py  config.py  launch.py
src/hydraflow/examples/: __init__.py  hello.py
src/hydraflow/logging/: __init__.py  exception_logging.py  init_wandb.py  logger_config.py
src/hydraflow/run/: __init__.py  setup.py
src/hydraxcel/: __init__.py
src/hydraxcel/accelerate/: __init__.py  config.py  config_registry.py  launch_tools.py
src/hydraxcel/hydra/: __init__.py  configuration.py  registration.py
src/hydraxcel/logging/: __init__.py  environment_logging.py  exception_logging.py  helpers.py  init_logging.py  init_mlflow.py  init_wandb.py  logger_config.py  mlflow_server.py
src/hydraxcel/resolvers/: __init__.py  class_name.py
src/hydraxcel/run/: __init__.py  setup.py
tests/: conftest.py
tests/hydraflow/accelerate/: test_launch_tools.py
tests/hydraflow/run/: test_setup.py
tests/hydraxcel/accelerate/: __init__.py  test_launch_tools.py
tests/hydraxcel/run/: test_setup.py
(+6 files in other folders)
