[project]
name = "hydraflow"
version = "0.1.0a"
description = "HydraFlow: Configuration-driven deep learning launcher combining Hydra, Accelerate, and UV for fast, reproducible experiments."
readme = "README.md"
authors = [{ name = "Carel van Niekerk", email = "vniekerk.carel@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "colorlog>=6.9.0",
    "hydra-core>=1.3.2",
    "transformers>=4.55.0",
    "wandb>=0.21.1",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-cov>=6.2.1"]

[project.scripts]
tests = "pytest:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

# Configuration for Pytest
[tool.pytest.ini_options]
addopts = "--cov src/hydraflow --verbose"
