[project]
name = "hydraxcel"
version = "0.3.0"
description = "HydraXcel: Configuration-driven deep learning launcher combining Hydra, Accelerate, and UV for fast, reproducible experiments."
readme = "README.md"
authors = [{ name = "Carel van Niekerk", email = "code@carelvniekerk.com" }]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "colorlog>=6.9.0",
    "diskcache>=5.6.3",
    "hydra-core",
    "transformers>=5.4.0",
    "wandb>=0.21.1",
    "weave>=0.52.17",
]

[tool.uv.sources]
hydra-core = { git = "https://github.com/facebookresearch/hydra" }

[tool.uv.extra-build-dependencies]
hydra-core = ["setuptools<=80.10.2"]

[dependency-groups]
dev = ["pytest-cov>=6.2.1"]

[project.scripts]
tests = "pytest:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

# Configuration for Pytest
[tool.pytest.ini_options]
addopts = "--cov src/hydraxcel --verbose --cov-report=term-missing"

# Configuration for Ruff (Python linter and formatter)
[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "W191",
    "T201",
    "UP035",
    "N816",
    "W293",
    "DTZ005",
    "DTZ007",
    "S602",
    "UP009",
    "ERA001",
    "RET504",
    "TC002",
    "LOG015",
    "D203",
    "D213",
    "FIX002",
    "TD002",
    "TD003",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP001"]
